{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 49,
  "lineage": "2953f489-5ef5-4eba-20d1-05153ed72bac",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "capstonegw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:internet-gateway/igw-07044e0bb72845ceb",
            "id": "igw-07044e0bb72845ceb",
            "owner_id": "904638262261",
            "tags": {
              "Name": "CapstoneIGW"
            },
            "tags_all": {
              "Name": "CapstoneIGW"
            },
            "vpc_id": "vpc-0f687ef62aab79a1e"
          },
          "dependencies": [
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Privatert",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:route-table/rtb-0b29975f3d9f1c50c",
            "id": "rtb-0b29975f3d9f1c50c",
            "owner_id": "904638262261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07044e0bb72845ceb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Privatert"
            },
            "tags_all": {
              "Name": "Privatert"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f687ef62aab79a1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.capstonegw",
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Publicrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:route-table/rtb-08b1425d39c2d8cd0",
            "id": "rtb-08b1425d39c2d8cd0",
            "owner_id": "904638262261",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07044e0bb72845ceb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Publicrt"
            },
            "tags_all": {
              "Name": "Publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f687ef62aab79a1e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.capstonegw",
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Capstonea",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd874f1a4b00b4ea",
            "route_table_id": "rtb-08b1425d39c2d8cd0",
            "subnet_id": "subnet-07fb359e568538858"
          },
          "dependencies": [
            "aws_internet_gateway.capstonegw",
            "aws_route_table.Publicrt",
            "aws_subnet.public",
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Capstoneb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0629f61086c8a4a80",
            "route_table_id": "rtb-0b29975f3d9f1c50c",
            "subnet_id": "subnet-081d84ad7dd48b07c"
          },
          "dependencies": [
            "aws_internet_gateway.capstonegw",
            "aws_route_table.Privatert",
            "aws_subnet.private",
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:subnet/subnet-081d84ad7dd48b07c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081d84ad7dd48b07c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904638262261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private"
            },
            "tags_all": {
              "Name": "Private"
            },
            "vpc_id": "vpc-0f687ef62aab79a1e"
          },
          "dependencies": [
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:subnet/subnet-07fb359e568538858",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fb359e568538858",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "904638262261",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0f687ef62aab79a1e"
          },
          "dependencies": [
            "aws_vpc.Capstone_VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Capstone_VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:904638262261:vpc/vpc-0f687ef62aab79a1e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0741cda26e30bf024",
            "default_route_table_id": "rtb-072133f069eb37d2f",
            "default_security_group_id": "sg-020fe084fb07d3804",
            "dhcp_options_id": "dopt-019077c3ad53e3eb0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f687ef62aab79a1e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072133f069eb37d2f",
            "owner_id": "904638262261",
            "tags": {
              "Name": "CapstoneVpc"
            },
            "tags_all": {
              "Name": "CapstoneVpc"
            }
          }
        }
      ]
    }
  ]
}